# project-dream32t

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
docs/: srs.md
src/: birthday  birthday.py  birthdays_func.py  classes.py  contact.py  data_storage.py  email.py  field.py  name.py  note.py  personal_assistant.py  phone.py
src/command/: command_description.py  parser.py
src/command/handler/: add_contact.py  add_note.py  add_phone.py  command_handler.py  command_handlers.py  confirm_delete.py  exit.py  help.py  list.py
src/command/handler/address/: add_address.py  change_address.py  del_address.py
src/command/handler/birthday/: add_birthday.py  del_birthday.py  list_birthdays.py
src/command/handler/contact/: add_contact.py  all_contact.py  del_contact.py  find_contact.py  show_contacts.py
src/command/handler/email/: add_email.py  change_email.py  del_email.py
src/command/handler/note/: add_note.py  add_tags.py  change_note.py  change_tag.py  del_note.py  del_tag.py  find_note_by_tags.py  find_note_by_text.py  list_notes.py  show_notes.py  sort_notes_by_tag.py
src/command/handler/phone/: add_phone.py  change_phone.py  del_phone.py
src/model/: AddressBook.py  address.py  birthday.py  contact.py  contact_book.py  email.py  field.py  name.py  note.py  phone.py
src/util/: colorize.py  messages.py
tests/: test.py
tests/command/: parser_test.py
tests/note/: note_test.py  test_note.py
tests/parser/: parser_test.py  test_parser.py
